--- a/ng-demos/ng-demos.csproj
+++ b/ng-demos/ng-demos.csproj
@@ -70,11 +70,29 @@
     <Content Include="content\bootstrap-theme.min.css" />
     <Content Include="content\bootstrap.css" />
     <Content Include="content\bootstrap.min.css" />
+    <Content Include="content\themes\bootstrap-cerulean.min.css" />
+    <Content Include="content\themes\bootstrap-cosmo.min.css" />
+    <Content Include="content\themes\bootstrap-cyborg.min.css" />
+    <Content Include="content\themes\bootstrap-darkly.min.css" />
+    <Content Include="content\themes\bootstrap-default.min.css" />
+    <Content Include="content\themes\bootstrap-flatly.min.css" />
+    <Content Include="content\themes\bootstrap-journal.min.css" />
+    <Content Include="content\themes\bootstrap-lumen.min.css" />
+    <Content Include="content\themes\bootstrap-paper.min.css" />
+    <Content Include="content\themes\bootstrap-readable.min.css" />
+    <Content Include="content\themes\bootstrap-sandstone.min.css" />
+    <Content Include="content\themes\bootstrap-slate.min.css" />
+    <Content Include="content\themes\bootstrap-spacelab.min.css" />
+    <Content Include="content\themes\bootstrap-superhero.min.css" />
+    <Content Include="content\themes\bootstrap-symplex.min.css" />
+    <Content Include="content\themes\bootstrap-united.min.css" />
+    <Content Include="content\themes\bootstrap-yeti.min.css" />
     <Content Include="content\toastr.css" />
     <Content Include="content\toastr.min.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="ng-demo-01\index1.html" />
     <Content Include="ng-demo-02\index2.html" />
+    <Content Include="ng-demo-03\index3.html" />
     <Content Include="packages.config" />
     <Content Include="Scripts\angular-animate.js" />
     <Content Include="Scripts\angular-animate.min.js" />
