--- a/ng-demos/ng-demos.csproj
+++ b/ng-demos/ng-demos.csproj
@@ -70,6 +70,8 @@
     <Content Include="content\bootstrap-theme.min.css" />
     <Content Include="content\bootstrap.css" />
     <Content Include="content\bootstrap.min.css" />
+    <Content Include="content\imagem\favicon-16x16.png" />
+    <Content Include="favicon.ico" />
     <Content Include="content\themes\bootstrap-cerulean.min.css" />
     <Content Include="content\themes\bootstrap-cosmo.min.css" />
     <Content Include="content\themes\bootstrap-cyborg.min.css" />
