--- a/ng-demos/ng-demos.csproj
+++ b/ng-demos/ng-demos.csproj
@@ -105,6 +105,7 @@
     <Content Include="ng-demo-06\app\repositories\CustomerRepository.js" />
     <Content Include="ng-demo-06\index6.html" />
     <Content Include="ng-demo-07\index7.html" />
+    <Content Include="ng-demo-08\index8.html" />
     <Content Include="packages.config" />
     <Content Include="Scripts\angular-animate.js" />
     <Content Include="Scripts\angular-animate.min.js" />
@@ -865,6 +866,7 @@
     <Content Include="Scripts\i18n\angular-locale_zu-za.js" />
     <Content Include="Scripts\i18n\angular-locale_zu.js" />
     <Content Include="ng-demo-06\app\data\customers.json" />
+    <Content Include="ng-demo-07\app\data\customers.json" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.1.1.js" />
     <Content Include="Scripts\jquery-3.1.1.min.js" />
